<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/colorBackground"
    tools:context=".FinancialAssessmentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_financial_details"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:textColor="?android:attr/textColorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_fund"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:paddingBottom="4dp" />

    <EditText
        android:id="@+id/edit_text_emergency_fund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:contentDescription="@string/emergency_fund_input_field"
        android:hint="@string/enter_amount"
        android:importantForAccessibility="no"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/savings"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:paddingBottom="4dp" />

    <EditText
        android:id="@+id/edit_text_savings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:contentDescription="@string/savings_input_field"
        android:hint="@string/enter_amount"
        android:importantForAccessibility="no"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:textColor="#000000"
        android:textColorHint="#757575"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="?android:attr/colorAccent"
        android:padding="12dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="#5E35B1" />
</LinearLayout>
