<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/colorBackground"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:textColor="?android:attr/textColorPrimary" />

    <Button
        android:id="@+id/button_financial_assessment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="?android:attr/colorAccent"
        android:contentDescription="@string/financial_assessment_description"
        android:padding="12dp"
        android:text="@string/financial_assessment"
        android:textAllCaps="false"
        android:textColor="#5E35B1" />

</LinearLayout>
