<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/background"> <!-- Ensure background color is set -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"
        android:text="@string/enter_your_monthly_income"
        android:textColor="@color/text_primary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_text_income"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/income"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:background="@drawable/edit_text_background"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/button_background"
        android:padding="12dp"
        android:text="@string/calculate"
        android:textColor="@color/button_text" />

    <TextView
        android:id="@+id/text_view_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingTop="16dp"
        android:textColor="@color/text_primary" />

    <Button
        android:id="@+id/button_perfect_life"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/button_background"
        android:padding="12dp"
        android:text="@string/perfect_life"
        android:textColor="@color/button_text"
        android:visibility="gone" />
</LinearLayout>
